example/secondfile/objects/Alternate_Access_Discount__c.object
<CustomObject>
    <description>This object will be used to determine the discounts to apply to access pricing that is returned for Alternate Access.</description>
    <fields>
        <fullName>Admin_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Admin Control</label>
        <referenceTo>Admin_Control__c</referenceTo>
        <relationshipName>Alternate_Access_Discounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percent__c</fullName>
        <label>Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MIS</fullName>
                </value>
                <value>
                    <fullName>AVPN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <label>Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <label>Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum Elite</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Out of Region Access Discount</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>Term__c</columns>
        <columns>Tier__c</columns>
        <columns>Percent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AD-{0000}</displayFormat>
        <label>Alternate Access Discount Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Out of Region Access Discounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>